working on fixing the issue where latest breaks the available array

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -179,6 +179,34 @@ body {
   float: left;
   clear: left;
 }
+button.grid {
+    width: 40px;
+    height: 40px;
+    border: 0;
+    box-sizing: border-box;
+    padding: 0;
+    background-color: transparent;
+    cursor: pointer;
+}
+button.grid span {
+  border: 1px solid #d4d9dd;
+  background-color: #eaecee;
+  box-sizing: border-box;
+  border-radius: 4px;
+  margin: 1%;
+}
+button#big span {
+    width: 100%;
+    height: 100%;
+}
+button#medium span {
+    width: 48%;
+    height: 48%;
+}
+button#small span {
+    width: 31%;
+    height: 31%;
+}
 .borderColor {
   width: 2rem;
   height: 2rem;
